volume-backup-wrapper - updated the backup-now script to mount the secrets as volumes in the ephemeral offen backup container so that they can be read in the backup container instead of the wrapper.

--- a/servers/benolilab/vmdocker/docker-compose/monitorance/backup.env
+++ b/servers/benolilab/vmdocker/docker-compose/monitorance/backup.env
@@ -48,3 +48,8 @@ SSH_REMOTE_PATH=/some/mounted-remote/path/destination
 # Notifications
 NOTIFICATION_LEVEL=info
 NOTIFICATION_URLS_FILE=/run/secrets/backup_notifications_discord_hook_url
+
+# HOST SECRETS TO PASS TO EPHEMERAL BACKUP CONTAINER:
+HOST_SSH_USER_FILE=/opt/monitorance-docker/secrets/.volume_backup_nas_user
+HOST_SSH_PASSWORD_FILE=/opt/monitorance-docker/secrets/.volume_backup_nas_pw
+HOST_NOTIFICATION_URLS_FILE=/opt/monitorance-docker/secrets/.backup_notifications_discord_hook_url
