--- a/servers/benolilab/vmdocker/docker-compose/docker-compose.yml
+++ b/servers/benolilab/vmdocker/docker-compose/docker-compose.yml
@@ -125,6 +125,7 @@ services:
             description: "Syncthing is a continuous file synchronization program. It synchronizes files between two or more computers in real time."
             com.centurylinklabs.watchtower.enable: "true"
             com.docker.backup.restart-policy: unless-stopped
+            docker-volume-backup.stop-during-backup: "true"
         healthcheck:
           test: ["CMD-SHELL", "wget --no-check-certificate --spider -q https://localhost:8384 || exit 1"]
           interval: 1m
