ZFS Backup Scripts - removed _test script - since test mode is incorporated to main script now.  Added help text and options variables to improve CLI usage.  Cleaned up log trimming function and adjusted TEST mode flag checking logic.  Cleaned up config file.

--- a/servers/benolinas/scripts/naspool_zfs_backup/zfs_backup_settings.conf
+++ b/servers/benolinas/scripts/naspool_zfs_backup/zfs_backup_settings.conf
@@ -1,10 +1,5 @@
 # Backup configuration settings
 
-# Set the IS_TEST variable to true to run a test only 
-# When false, the ZFS commands will be executed. i.e. a snapshot will be made and sent to the backup pool, and old ones will be destroyed
-# Note: This will get converted to boolean in the script, it must be set exclusively to "false" in order to run in "LIVE" mode
-IS_TEST_STRING="true" # Safety flag for running just a test without impacting the ZFS pools
-
 # Source pool (replace with your primary pool name) - this is the one that will get a snapshot taken and sent to the backup pool
 # Note: The BACKUP_POOL will be determined by what backup pool is active at the time of running the script; it will be searched via $(zpool list -H -o name | grep -m1 "naspool_backup")
 #	If multiple backup pools are active, only the first one found will be chosen to receive the snapshot from the SOURCE_POOL
@@ -32,7 +27,7 @@ DISK_USAGE_LOG="/var/log/zfs_disk_usage.log"
 SNAPSHOT_TRANSFER_HISTORY_LOG="/var/log/zfs_snapshot_transfers.log"
 
 # Make sure the Discord webhook is created and the path etc. is stored here:
-# Formate of Webhook: https://discord.com/api/webhooks/[WEBHOOK_ID]/[UNIQUE_CODE]
+# Format of Webhook: https://discord.com/api/webhooks/[WEBHOOK_ID]/[UNIQUE_CODE]
 # [RELATIVE TO zfs_backup.sh SCRIPT DIRECTORY]/secrets/.zfs_backups_discord_webhook"
 
 # Keep the last N number of lines in the log files to manage the log file sizes.  
