--- a/servers/benolilab/vmdocker/docker-compose/docker-compose.yml
+++ b/servers/benolilab/vmdocker/docker-compose/docker-compose.yml
@@ -44,34 +44,53 @@ services:
         labels:
             description: "Plex organizes video, music and photos from personal media libraries and streams them to smart TVs, streaming boxes and mobile devices."
             com.centurylinklabs.watchtower.enable: "true"
-    nginx-proxy:
-        container_name: nginx-proxy
-        image: "jc21/nginx-proxy-manager:latest"
+    caddy:
+        container_name: caddy
+        image: caddy:latest
         logging: *default-logging
         networks:
           server_net:
-            ipv4_address: 172.18.0.254
-        environment:
-          - "DB_SQLITE_FILE=/config/database.sqlite"
-          - "DISABLE_IPV6=true"
+            ipv4_address: 172.18.0.250
         ports:
-           - '80:80'
-           - '443:443'
-           - '81:81'
-           - '853:853'
-        restart: "unless-stopped"
+            - "80:80"
+            - "443:443"
+        restart: always
         volumes:
-          - "nginx_proxy_config:/config"
-          - "nginx_proxy_letsencrypt:/etc/letsencrypt"
-          - "nginx_proxy_data:/data"
-        labels:
-            description: "Nginx, pronounced 'engine-x,' is a versatile open-source software that acts as a web server, reverse proxy, load balancer, and more."
-            com.centurylinklabs.watchtower.enable: "true"
-            docker-volume-backup.stop-during-backup: "true"
+            - ./Caddyfile:/etc/caddy/Caddyfile
+            - ./caddy-sites/wwwroot:/wwwroot
+            - ./caddy-sites/certs:/certs:ro
+            - caddy_data:/data
+            - caddy_config:/config
         healthcheck:
-          test: ["CMD", "/bin/check-health"]
-          interval: 10s
-          timeout: 3s
+              test: ["CMD-SHELL", "wget --spider -q http://localhost || exit 1"]
+              interval: 1m30s
+              timeout: 30s
+              retries: 5
+        labels:
+            description: "Caddy is a powerful, enterprise-ready, open source web server with automatic HTTPS written in Go."
+            com.centurylinklabs.watchtower.enable: "true"
+    caddy-ui:
+        container_name: caddy-ui
+        image: qmcgaw/caddy-ui
+        restart: unless-stopped
+        ports:
+            - "8000:8000"
+        environment:
+            - CADDY_API_ENDPOINT=http://caddy:2019
+            - TZ=Etc/UTC
+        depends_on:
+            - caddy
+        networks:
+            server_net:
+                ipv4_address: 172.18.0.251
+        healthcheck:
+              test: ["CMD-SHELL", "wget --spider -q http://localhost:8000 || exit 1"]
+              interval: 1m30s
+              timeout: 30s
+              retries: 5
+        labels:
+            description: "Caddy-UI is an open-source user interface for managing and interfacing with Caddy."
+            com.centurylinklabs.watchtower.enable: "true"    
     adguardhome:
         container_name: adguardhome
         image: adguard/adguardhome
@@ -131,13 +150,11 @@ services:
           interval: 1m
           timeout: 10s
           retries: 3
-volumes:    
-    nginx_proxy_config:
-        name: nginx_proxy_config
-    nginx_proxy_letsencrypt:
-        name: nginx_proxy_letsencrypt
-    nginx_proxy_data:
-        name: nginx_proxy_data
+volumes:
+    caddy_data:
+        name: caddy_data
+    caddy_config:
+        name: caddy_config
     adguard_work:
         name: adguard_work
     adguard_conf:
