--- a/servers/benolilab/vmdocker/docker-compose/monitorance-docker/volume-backup-wrapper/backup.env
+++ b/servers/benolilab/vmdocker/docker-compose/monitorance-docker/volume-backup-wrapper/backup.env
@@ -18,7 +18,7 @@ BACKUP_SERVICES=immich-server,immich-machine-learning,immich-redis
 
 # Containers to check logs for quiet time before taking offline (prevents partial file uploads etc.)
 # Add other services here as needed - typically it's best to add any service that could be getting synched to or updated during the backup
-QUIET_CONTAINERS=immich-server,immich-redis,syncthing
+QUIET_CONTAINERS=immich-server,immich-redis
 
 # Quiet time settings (periods are in seconds and pattern to check in logs)
 QUIET_PERIOD=60
