--- a/servers/benolilab/vmdocker/docker-compose/immich-docker/docker-compose.yml
+++ b/servers/benolilab/vmdocker/docker-compose/immich-docker/docker-compose.yml
@@ -27,6 +27,7 @@ services:
             # Do not edit the next line. If you want to change the media storage location on your system, edit the value of UPLOAD_LOCATION in the .env file
             - ${UPLOAD_LOCATION}:/usr/src/app/upload
             - /etc/localtime:/etc/localtime:ro
+            - /mnt/naspool/benolilab-docker/foldersync:/external/foldersync:ro
         env_file:
             - .env
         environment:
@@ -51,7 +52,7 @@ services:
             description: "Immich is a self-hosted photo and video backup solution, using Docker containers."
             com.docker.backup.restart-policy: always
             docker-volume-backup.stop-during-backup: "true"
-            # com.centurylinklabs.watchtower.enable: "true"
+            com.centurylinklabs.watchtower.enable: "true"
     immich-machine-learning:
         container_name: immich-machine-learning
         # For hardware acceleration, add one of -[armnn, cuda, rocm, openvino, rknn] to the image tag.
@@ -78,7 +79,7 @@ services:
             description: "Immich leverages machine learning (ML) for features like facial recognition and smart search, using a separate machine learning service within its Docker environment."
             com.docker.backup.restart-policy: always
             docker-volume-backup.stop-during-backup: "true"
-            # com.centurylinklabs.watchtower.enable: "true"
+            com.centurylinklabs.watchtower.enable: "true"
     immich-redis:
         container_name: immich-redis
         image: docker.io/valkey/valkey:8-bookworm@sha256:ff21bc0f8194dc9c105b769aeabf9585fea6a8ed649c0781caeac5cb3c247884
