--- a/servers/benolilab/vmdocker/docker-compose/benolilab-docker/docker-compose.yml
+++ b/servers/benolilab/vmdocker/docker-compose/benolilab-docker/docker-compose.yml
@@ -45,7 +45,8 @@ services:
             - plex_claim
         labels:
             description: "Plex organizes video, music and photos from personal media libraries and streams them to smart TVs, streaming boxes and mobile devices."
-            com.centurylinklabs.watchtower.enable: "true"    
+            com.centurylinklabs.watchtower.enable: "true"
+            docker-volume-backup.stop-during-backup: "true"
     adguardhome:
         container_name: adguardhome
         image: adguard/adguardhome
