vmdocket - set the tocket api version for watchtower to 1.44 to resolve issue with docker engine 29 making api version 1.44 mandatory

--- a/servers/benolilab/vmdocker/docker-compose/monitorance-docker/docker-compose.yml
+++ b/servers/benolilab/vmdocker/docker-compose/monitorance-docker/docker-compose.yml
@@ -46,6 +46,7 @@ services:
             - /var/run/docker.sock:/var/run/docker.sock
         restart: unless-stopped
         environment:
+            DOCKER_API_VERSION: 1.44
             WATCHTOWER_CLEANUP: true
             WATCHTOWER_DEBUG: true
             WATCHTOWER_ROLLING_RESTART: true
